--- a/KonversiNilai/style.css
+++ b/KonversiNilai/style.css
@@ -7,11 +7,21 @@
 */
 body{
     background-color: #7D84B2;
+    flex-direction: column;
     display: flex;
     justify-content: center;
     align-items: center;
     height: 100vh;
     margin: 0;
+}
+.up{
+    font-size: 42px;
+    font-weight: 700;
+    color: #22577A;
+}
+.caption{
+    padding-bottom: 20px;
+    color: #22577A;
 }
 .mid{
     display: flex;
